fixed 时间、首页跳转 bug

--- a/src/main/webapp/WEB-INF/list.html
+++ b/src/main/webapp/WEB-INF/list.html
@@ -22,7 +22,7 @@
 			<div id="page-wrapper">
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">IT LIEUTENANT</a></h1>
+						<h1><a href="/">IT LIEUTENANT</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -43,9 +43,9 @@
 						<header>
 							<h2>「IT LIEUTENANT」</h2>
 							<h3>互联网中尉的文章列表</h3>
-							<span>关于中尉，他是在萨拉米耶挑战了阿契美尼德王朝的希腊海军，他是在高加米拉冲击大流士三世宠大军团的马其顿伙友骑兵，</span>
-							<span>他是在阿斯卡特悲伤之夜后重新投入战斗的卡斯蒂利亚火枪手，他是在勒班陀击败奥斯曼土耳其帝国的基督教炮手，他是在</span>
-							<span>中途岛击败日本帝国的海军飞行员。他就是自由、独立、理性、勇敢的人类基因形象。是我要成为的人。</span>
+							<span>关于中尉，他是在萨拉米耶挑战了阿契美尼德王朝的希腊海军，</span><br><span>他是在高加米拉冲击大流士三世宠大军团的马其顿伙友骑兵，</span>
+							<span>他是在阿斯卡特悲伤之夜后重新投入战斗的卡斯蒂利亚火枪手，</span><br><span>他是在勒班陀击败奥斯曼土耳其帝国的基督教炮手，</span>
+							<span>他是在中途岛击败日本帝国的海军飞行员。</span><br><span>他就是自由、独立、理性、勇敢的人类基因形象。</span><br><span>是我要成为的人。</span>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
