--- a/src/main/webapp/WEB-INF/detail.html
+++ b/src/main/webapp/WEB-INF/detail.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">IT LIEUTENANT</a></h1>
+						<h1><a href="/">IT LIEUTENANT</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
