--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">IT LIEUTENANT</a></h1>
+						<h1><a href="/">IT LIEUTENANT</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
